kubernetes/production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eternia-production
  labels:
    name: eternia-production
    environment: production
